--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:nouveau-rich.helloWorld"
+		"onCommand:nouveau-rich.helloWorld",
+		"*"
 	],
 	"main": "./extension.js",
 	"contributes": {
@@ -36,5 +37,8 @@
 		"mocha": "^8.1.3",
 		"typescript": "^4.1.2",
 		"vscode-test": "^1.4.1"
+	},
+	"dependencies": {
+		"axios": "^0.21.0"
 	}
 }
